ansible_collections/ska_collections/k8s/tests/resources/metallb.yml
---
apiVersion: v1
kind: Pod
metadata:
  name: test-metallb-app
  namespace: default
  labels:
    app: test-metallb
spec:
  containers:
    - name: banana-app
      image: hashicorp/http-echo
      args:
        - "-text=echo"
---
apiVersion: v1
kind: Service
metadata:
  name: test-metallb-service
  namespace: default
spec:
  type: LoadBalancer
  selector:
    app: test-metallb
  ports:
    - port: 5678
