ansible_collections/ska_collections/k8s/tests/resources/metallb_test.yml
---
apiVersion: v1
kind: Pod
metadata:
  name: test-metallb-app
  namespace: default
  labels:
    app: test-metallb
spec:
  containers:
    - name: test-metallb-app
      image: busybox:1.28
      tty: true
---
apiVersion: v1
kind: Service
metadata:
  name: test-metallb-service
  namespace: default
spec:
  type: LoadBalancer
  selector:
    app: test-metallb
  ports:
    - port: 9876
