ansible_collections/ska_collections/k8s/tests/resources/rookio.yml
---
apiVersion: v1
kind: PersistentVolumeClaim
metadata:
  name: read-write-nfss1-pvc
  namespace: default
spec:
  accessModes:
    - ReadWriteMany
  resources:
    requests:
      storage: 1Gi
  storageClassName: nfss1
---
apiVersion: v1
kind: Pod
metadata:
  name: read-write-nfss1-test
  namespace: default
spec:
  restartPolicy: Never
  volumes:
    - name: vol
      persistentVolumeClaim:
        claimName: read-write-nfss1-pvc
  containers:
    - name: write-pv
      image: "registry.k8s.io/busybox"
      command: ["/bin/sh", "-c", "while true; do echo 'something' > /cucumber/cucu.txt; sleep 5; done"]
      volumeMounts:
        - name: vol
          mountPath: /cucumber
    - name: read-pv
      image: "registry.k8s.io/busybox"
      command: ["/bin/sh", "-c", "while true; do cat /cucumber/cucu.txt; sleep 5; done"]
      volumeMounts:
        - name: vol
          mountPath: /cucumber
