ansible_collections/ska_collections/k8s/tests/resources/storageprovisioner.yml
apiVersion: v1
kind: Pod
metadata:
  name: read-write-hostpath-test
  namespace: default
spec:
  restartPolicy: Never
  volumes:
    - name: vol
      hostPath:
        path: /cucumber
  containers:
    - name: write-pv
      image: "registry.k8s.io/busybox"
      command: ["/bin/sh", "-c", "while true; do echo 'something' > /cucumber/cucu.txt; sleep 5; done"]
      volumeMounts:
        - name: vol
          mountPath: /cucumber
    - name: read-pv
      image: "registry.k8s.io/busybox"
      command: ["/bin/sh", "-c", "while true; do cat /cucumber/cucu.txt; sleep 5; done"]
      volumeMounts:
        - name: vol
          mountPath: /cucumber
