ansible_collections/ska_collections/k8s/tests/resources/vault.yml
---

kind: Pod
apiVersion: v1
metadata:
  name: vault-app
  namespace: default
  annotations:
    vault.hashicorp.com/agent-inject: 'true'
    vault.hashicorp.com/role: 'kube-role'
    vault.hashicorp.com/agent-inject-secret-key: '/test-injection'
spec:
  containers:
    - name: vault-app
      image: hashicorp/http-echo
      args:
        - "-text=$(cat /vault/secrets/key)"
